--- a/src/output.css
+++ b/src/output.css
@@ -12,10 +12,8 @@
     --color-red-900: oklch(39.6% 0.141 25.723);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-green-500: oklch(72.3% 0.219 149.579);
-    --color-green-600: oklch(62.7% 0.194 149.214);
     --color-teal-400: oklch(77.7% 0.152 181.912);
     --color-cyan-500: oklch(71.5% 0.143 215.221);
-    --color-purple-900: oklch(38.1% 0.176 304.987);
     --color-pink-600: oklch(59.2% 0.249 0.584);
     --color-pink-700: oklch(52.5% 0.223 3.958);
     --color-white: #fff;
@@ -188,17 +186,11 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
   .mt-48 {
     margin-top: calc(var(--spacing) * 48);
   }
   .mr-4 {
     margin-right: calc(var(--spacing) * 4);
-  }
-  .mr-8 {
-    margin-right: calc(var(--spacing) * 8);
   }
   .mr-9 {
     margin-right: calc(var(--spacing) * 9);
@@ -211,9 +203,6 @@
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
-  }
-  .mb-16 {
-    margin-bottom: calc(var(--spacing) * 16);
   }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
@@ -296,6 +285,9 @@
   .items-start {
     align-items: flex-start;
   }
+  .items-stretch {
+    align-items: stretch;
+  }
   .justify-around {
     justify-content: space-around;
   }
@@ -369,15 +361,6 @@
   }
   .bg-\[url\(\.\.\/assets\/images\/img-course\.png\)\] {
     background-image: url(../assets/images/img-course.png);
-  }
-  .bg-\[url\(\.\/assets\/images\/img-course\.png\)\] {
-    background-image: url(./assets/images/img-course.png);
-  }
-  .bg-\[url\(\/assets\/images\/img-course\.png\)\] {
-    background-image: url(/assets/images/img-course.png);
-  }
-  .bg-\[url\(assets\/images\/img-course\.png\)\] {
-    background-image: url(assets/images/img-course.png);
   }
   .from-pink-600 {
     --tw-gradient-from: var(--color-pink-600);
@@ -467,6 +450,31 @@
   .md\:hidden {
     @media (width >= 48rem) {
       display: none;
+    }
+  }
+  .md\:w-72 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 72);
+    }
+  }
+  .md\:w-\[50\%\] {
+    @media (width >= 48rem) {
+      width: 50%;
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
+    }
+  }
+  .md\:items-stretch {
+    @media (width >= 48rem) {
+      align-items: stretch;
+    }
+  }
+  .md\:gap-36 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 36);
     }
   }
 }
