--- a/src/output.css
+++ b/src/output.css
@@ -287,6 +287,9 @@
   .mr-0 {
     margin-right: calc(var(--spacing) * 0);
   }
+  .mr-0\.5 {
+    margin-right: calc(var(--spacing) * 0.5);
+  }
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
   }
@@ -397,6 +400,9 @@
   }
   .w-72 {
     width: calc(var(--spacing) * 72);
+  }
+  .w-\[100vw\] {
+    width: 100vw;
   }
   .w-full {
     width: 100%;
@@ -670,6 +676,9 @@
   }
   .bg-\[linear-gradient\(94\.01deg\,rgba\(2\,6\,23\,0\.85\)_3\.11\%\,rgba\(2\,6\,23\,0\.60\)_45\%\,rgba\(2\,6\,23\,0\.85\)_98\.45\%\)\,radial-gradient\(900px_circle_at_30\%_30\%\,rgba\(217\,70\,239\,0\.35\)\,transparent_55\%\)\,radial-gradient\(900px_circle_at_70\%_60\%\,rgba\(34\,211\,238\,0\.25\)\,transparent_55\%\)\,url\(\'\.\.\/assets\/images\/hero_mobile\.png\'\)\] {
     background-image: linear-gradient(94.01deg,rgba(2,6,23,0.85) 3.11%,rgba(2,6,23,0.60) 45%,rgba(2,6,23,0.85) 98.45%),radial-gradient(900px circle at 30% 30%,rgba(217,70,239,0.35),transparent 55%),radial-gradient(900px circle at 70% 60%,rgba(34,211,238,0.25),transparent 55%),url('../assets/images/hero_mobile.png');
+  }
+  .bg-\[linear-gradient\(94\.01deg\,rgba\(2\,6\,23\,0\.85\)_3\.11\%\,rgba\(2\,6\,23\,0\.60\)_45\%\,rgba\(2\,6\,23\,0\.85\)_98\.45\%\)\,radial-gradient\(900px_circle_at_30\%_30\%\,rgba\(217\,70\,239\,0\.35\)\,transparent_55\%\)\,radial-gradient\(900px_circle_at_70\%_60\%\,rgba\(34\,211\,238\,0\.25\)\,transparent_55\%\)\,url\(\'\/assets\/images\/hero_mobile\.png\'\)\] {
+    background-image: linear-gradient(94.01deg,rgba(2,6,23,0.85) 3.11%,rgba(2,6,23,0.60) 45%,rgba(2,6,23,0.85) 98.45%),radial-gradient(900px circle at 30% 30%,rgba(217,70,239,0.35),transparent 55%),radial-gradient(900px circle at 70% 60%,rgba(34,211,238,0.25),transparent 55%),url('/assets/images/hero_mobile.png');
   }
   .bg-\[url\(\.\.\/assets\/images\/img-course\.png\)\] {
     background-image: url(../assets/images/img-course.png);
@@ -1004,6 +1013,11 @@
       }
     }
   }
+  .focus\:border-red-800 {
+    &:focus {
+      border-color: var(--color-red-800);
+    }
+  }
   .focus\:border-white {
     &:focus {
       border-color: var(--color-white);
@@ -1029,6 +1043,46 @@
       bottom: calc(var(--spacing) * -2.5);
     }
   }
+  .md\:-bottom-2\/12 {
+    @media (width >= 48rem) {
+      bottom: calc(calc(2/12 * 100%) * -1);
+    }
+  }
+  .md\:-bottom-4 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * -4);
+    }
+  }
+  .md\:-bottom-7 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * -7);
+    }
+  }
+  .md\:bottom-0 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:bottom-0\.5 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 0.5);
+    }
+  }
+  .md\:bottom-3 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 3);
+    }
+  }
+  .md\:bottom-4 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:bottom-5 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 5);
+    }
+  }
   .md\:mt-0 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -1052,6 +1106,11 @@
   .md\:mr-96 {
     @media (width >= 48rem) {
       margin-right: calc(var(--spacing) * 96);
+    }
+  }
+  .md\:mb-0 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 0);
     }
   }
   .md\:ml-0 {
@@ -1227,6 +1286,11 @@
   .md\:bg-\[linear-gradient\(94\.01deg\,rgba\(2\,6\,23\,0\.85\)_3\.11\%\,rgba\(2\,6\,23\,0\.60\)_45\%\,rgba\(2\,6\,23\,0\.85\)_98\.45\%\)\,radial-gradient\(900px_circle_at_30\%_30\%\,rgba\(217\,70\,239\,0\.35\)\,transparent_55\%\)\,radial-gradient\(900px_circle_at_70\%_60\%\,rgba\(34\,211\,238\,0\.25\)\,transparent_55\%\)\,url\(\'\.\.\/assets\/images\/hero_desktop\.png\'\)\] {
     @media (width >= 48rem) {
       background-image: linear-gradient(94.01deg,rgba(2,6,23,0.85) 3.11%,rgba(2,6,23,0.60) 45%,rgba(2,6,23,0.85) 98.45%),radial-gradient(900px circle at 30% 30%,rgba(217,70,239,0.35),transparent 55%),radial-gradient(900px circle at 70% 60%,rgba(34,211,238,0.25),transparent 55%),url('../assets/images/hero_desktop.png');
+    }
+  }
+  .md\:bg-\[linear-gradient\(94\.01deg\,rgba\(2\,6\,23\,0\.85\)_3\.11\%\,rgba\(2\,6\,23\,0\.60\)_45\%\,rgba\(2\,6\,23\,0\.85\)_98\.45\%\)\,radial-gradient\(900px_circle_at_30\%_30\%\,rgba\(217\,70\,239\,0\.35\)\,transparent_55\%\)\,radial-gradient\(900px_circle_at_70\%_60\%\,rgba\(34\,211\,238\,0\.25\)\,transparent_55\%\)\,url\(\'\/assets\/images\/hero_desktop\.png\'\)\] {
+    @media (width >= 48rem) {
+      background-image: linear-gradient(94.01deg,rgba(2,6,23,0.85) 3.11%,rgba(2,6,23,0.60) 45%,rgba(2,6,23,0.85) 98.45%),radial-gradient(900px circle at 30% 30%,rgba(217,70,239,0.35),transparent 55%),radial-gradient(900px circle at 70% 60%,rgba(34,211,238,0.25),transparent 55%),url('/assets/images/hero_desktop.png');
     }
   }
   .md\:bg-cover {
